--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
+<!-- src/main/resources/static/index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Login Page</title>
-    <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
-    <h1>Login Page</h1>
-    <form action="/login" method="POST">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
+    <h1>Welcome to the Login Page!</h1>
+    <form action="/login" method="post">
+        Username: <input type="text" name="username"><br>
+        Password: <input type="password" name="password"><br>
         <input type="submit" value="Login">
     </form>
 </body>
 </html>
+
